--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     font-size: 24px;
     font-weight: 300;
     margin: 50px 0 70px; /* Increased margin bottom for more space between subheading and thumbnails */
+    margin-bottom: 60px; /* Increased margin-bottom for more space between subheading and thumbnails */
     color: #555;
 }
 
