--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,15 @@ body {
 .main-heading {
     font-size: 48px;
     font-weight: bold;
-    margin: 10px 0 10px;
+    margin: 30px 0 10px; /* Adjusted margin to give more space */
     color: #111;
 }
 
 .subheading {
     font-size: 24px;
     font-weight: 300;
-    margin: 10px 0 10px; /* Increased margin bottom for more space between subheading and thumbnails */
-    margin-bottom: 10px; /* Increased margin-bottom for more space between subheading and thumbnails */
+    margin-top: 30px; /* Increased margin-top for more space between heading and subheading */
+    margin-bottom: 40px; /* Increased margin-bottom for more space between subheading and thumbnails */
     color: #555;
 }
 
@@ -33,8 +33,7 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 40px;
-    margin-top: 10px; /* Optionally add a margin top to create more space between subheading and thumbnails */
-
+    margin-top: 10px; /* Optional: Adjusted margin-top for more space between subheading and thumbnails */
 }
 
 .thumbnail {
