--- a/styles.css
+++ b/styles.css
@@ -68,45 +68,53 @@ body {
 }
 
 /* Booking Form */
-.booking-form {
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    max-width: 600px;
-    margin: 0 auto;
-    text-align: left;
-}
+  .booking-form {
+        background-color: white;
+        padding: 20px;
+        margin: 30px auto;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        max-width: 600px;
+    }
 
-.booking-form label {
-    font-size: 16px;
-    margin-bottom: 8px;
-    display: block;
-}
+    .booking-form label {
+        font-size: 14px;
+        display: block;
+        margin-bottom: 5px;
+    }
 
-.booking-form input,
-.booking-form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-}
+    .booking-form input,
+    .booking-form textarea {
+        width: 100%;
+        padding: 10px 15px; /* Added padding-right for better appearance */
+        margin-bottom: 20px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
 
-.booking-form button {
-    padding: 12px 20px;
-    font-size: 16px;
-    color: white;
-    background-color: #111;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
+    .booking-form textarea {
+        resize: vertical; /* Restrict resizing to vertical only */
+        max-height: 300px; /* Optional: Limit the height of the comments box */
+    }
 
-.booking-form button:hover {
-    background-color: #333;
-}
+    .booking-form button {
+        padding: 10px 20px;
+        font-size: 16px;
+        color: white;
+        background-color: #111;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .booking-form button:hover {
+        background-color: #333;
+    }
+
+    .form-section {
+        margin-bottom: 20px;
+    }
 
 @media (max-width: 768px) {
     .thumbnail {
